--- a/index.css
+++ b/index.css
@@ -522,4 +522,10 @@ main {
     right: 10px;
 }
 
+@media only screen and (max-width: 600px) {
+    .copy-footer {
+        display: none;
+    }
+}
+
 
